[package]
name = "benjamin_batchly"
version = "0.1.1"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = """
Low latency batching tool. Bundle lots of single concurrent operations into sequential batches of work.
"""
repository = "https://github.com/alexheretic/benjamin-batchly"
keywords = ["batch", "async", "concurrent"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
dashmap = "6.0.1"
futures-util = { version = "0.3.21", default-features = false }
tokio = { version = "1.19", features = ["sync"] }

[dev-dependencies]
anyhow = "1.0.57"
tokio = { version = "1", features = ["time", "macros", "rt"] }
